--- a/index.scss
+++ b/index.scss
@@ -1,3 +1,6 @@
+$background: #fff;
+$todoapp:#e6e6e6;
+
 html,
 body {
 	margin: 0;
@@ -23,7 +26,7 @@ button {
 body {
 	font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	line-height: 1.4em;
-	background: #fff;
+	background: $background;
 	color: #4d4d4d;
 	min-width: 230px;
 	max-width: 550px;
@@ -42,7 +45,7 @@ body {
 }
 
 .todoapp {
-	background: #fff;
+	background: $background;
 	margin: 130px 0 40px 0;
 	position: relative;
 	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
@@ -52,19 +55,19 @@ body {
 .todoapp input::-webkit-input-placeholder {
 	font-style: italic;
 	font-weight: 300;
-	color: #e6e6e6;
+	color: $todoapp;
 }
 
 .todoapp input::-moz-placeholder {
 	font-style: italic;
 	font-weight: 300;
-	color: #e6e6e6;
+	color: $todoapp;
 }
 
 .todoapp input::input-placeholder {
 	font-style: italic;
 	font-weight: 300;
-	color: #e6e6e6;
+	color: $todoapp;
 }
 
 .todoapp h1 {
