--- a/index.scss
+++ b/index.scss
@@ -1,6 +1,17 @@
 $background: #fff;
 $todoapp:#e6e6e6;
 
+@mixin font-smoothing() {
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+} 
+
+@mixin todoapp-input($color) {
+	font-style: italic;
+	font-weight: 300;
+	color: $color;
+}
+
 html,
 body {
 	margin: 0;
@@ -19,8 +30,7 @@ button {
 	color: inherit;
 	-webkit-appearance: none;
 	appearance: none;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+	@include font-smoothing()
 }
 
 body {
@@ -31,9 +41,8 @@ body {
 	min-width: 230px;
 	max-width: 550px;
 	margin: 0 auto;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
 	font-weight: 300;
+	@include font-smoothing()
 }
 
 :focus {
@@ -53,21 +62,15 @@ body {
 }
 
 .todoapp input::-webkit-input-placeholder {
-	font-style: italic;
-	font-weight: 300;
-	color: $todoapp;
+	@include todoapp-input($todoapp)
 }
 
 .todoapp input::-moz-placeholder {
-	font-style: italic;
-	font-weight: 300;
-	color: $todoapp;
+	@include todoapp-input($todoapp)
 }
 
 .todoapp input::input-placeholder {
-	font-style: italic;
-	font-weight: 300;
-	color: $todoapp;
+	@include todoapp-input($todoapp)
 }
 
 .todoapp h1 {
