把變數及函式拆出別的檔案做管理並且import進來index.scss做使用

--- a/index.scss
+++ b/index.scss
@@ -1,16 +1,4 @@
-$background: #fff;
-$todoapp:#e6e6e6;
-
-@mixin font-smoothing() {
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-} 
-
-@mixin todoapp-input($color) {
-	font-style: italic;
-	font-weight: 300;
-	color: $color;
-}
+@import 'variable', 'mixins';
 
 html,
 body {
